# BJTU-GDI

./: README.md
GameEngine/: KekEngine.cmake
GameEngine/KekEngine/includes/: boxAnimations.h  graphicHandler.h  livingEntity.h  mediaHandler.h  physics.h  speechSound.h  tilesetHandler.h
GameEngine/KekEngine/src/: boxAnimations.cpp  graphicHandler.cpp  livingEntity.cpp  mediaHandler.cpp  movementsEntities.cpp  physics.cpp  speechSound.cpp  tilesetHandler.cpp
GameEngine/animations/: AnimatedSprite.cpp
UnderKek/: CMakeLists.txt
UnderKek/includes/: underkek.h
UnderKek/libs/SFML/: libBox2D.so.2.3.0  libsfml-graphics.so.2.3.2  libsfml-network.so.2.3.2  libsfml-system.so.2.3  libsfml-window.so.2.3.2
UnderKek/media/maps/: base  room_definition
UnderKek/media/textures/: heart.jpe
UnderKek/src/: combat.cpp  combatMenus.cpp  init.cpp  main.cpp  underkek.cpp  wanderlust.cpp
week1/: README.md
week2/: README.md
week3/: README.md
week4/: README.md
